# bat_detector

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  eval_detection.py
.github/workflows/: release-gui.yml  release.yml
bat-review/: index.html  package-lock.json  package.json  vite.config.ts
bat-review/src/: App.tsx  api.ts  types.ts
bat-review/src-tauri/: Cargo.toml  tauri.conf.json
bat-review/src-tauri/capabilities/: default.json
bat-review/src-tauri/icons/: icon.icns
bat-review/src-tauri/src/: lib.rs  main.rs
bat-review/src/components/: AnnotationsView.tsx  AudioPlayer.tsx  PassGrid.tsx  RecordingList.tsx  SpectrogramViewer.tsx
eval/: ground_truth.csv
htmls/: Greater Horseshoe_spectrogram.html  Soprano Pipistrelle_spectrogram.html
src/: api.rs  classify.rs  detection.rs  features.rs  lib.rs  main.rs  output.rs
src/static/: spectrogram.css  spectrogram.js
