[package]
name = "bat_detector"
version = "0.1.3"
edition = "2024"
description = "Bat call detector and classifier for AudioMoth WAV recordings"
license = "MIT"
repository = "https://github.com/ARU-life-sciences/bat_detector"

[dependencies]
hound = "3.5.1"
image = "0.25"
rayon = "1.11.0"
rustfft = "6.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
